Add footer with creator attribution and style link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <!-- Moved footer inside the container and added a CSS class -->
         <footer class="footer">
             This app uses ChatGPT for summary generation.
+            <br><br>
+            <a href="https://github.com/keenanbruni" target="_blank" rel="noopener noreferrer">Created by Keenan Bruni</a>
         </footer>
     </div>
 
